tests/baselines/reference/emptyTuplesTypeAssertion01.errors.txt
tests/cases/conformance/types/tuple/emptyTuples/emptyTuplesTypeAssertion01.ts(2,11): error TS2733: Index '0' is out-of-bounds in tuple of length 0.


==== tests/cases/conformance/types/tuple/emptyTuples/emptyTuplesTypeAssertion01.ts (1 errors) ====
    let x = <[]>[];
    let y = x[0];
              ~
!!! error TS2733: Index '0' is out-of-bounds in tuple of length 0.